--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,6 +2,13 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="container">
+    <!-- Navbar -->
+    <nav class="navbar">
+        <div class="navbar-brand">
+            <h1>Welcome to HC Feedback Tool</h1>
+        </div>
+    </nav>
+    
     <!-- Search Bar -->
     <div class="search-container">
         <input type="text" id="searchHCs" placeholder="Search HCs" class="search-input">
