fix(template): improve formatting of feedback description in index.html

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,7 +12,8 @@
     <div id="hcList" class="hc-list">
         <h2>HCs Feedback</h2>
         <p class="hc-feedback-description">
-            This tool will help you receive feedback on your applications and gain a better understanding of HC processes.
+            This tool will help you receive feedback on your applications and gain a better understanding of HC
+            processes.
         </p>
         <select id="hcSelect" class="hc-select">
             <option value="">Select an HC example...</option>
