feat: add data for EA HCs and dropdown filter in UI

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,6 +15,16 @@
             This tool will help you receive feedback on your applications and gain a better understanding of HC
             processes.
         </p>
+
+        <!-- Add cornerstone filter -->
+        <select id="cornerstoneFilter" class="cornerstone-select">
+            <option value="">All Cornerstones</option>
+            <option value="Empirical Analyses">Empirical Analyses</option>
+            <option value="Complex Systems">Complex Systems</option>
+            <option value="Formal Analyses">Formal Analyses</option>
+            <option value="Multimodal Communications">Multimodal Communications</option>
+        </select>
+
         <select id="hcSelect" class="hc-select">
             <option value="">Select an HC example...</option>
         </select>
