--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -49,7 +49,7 @@
 }
 
 /* HC List Styles */
-.hc-list {
+.cornerstone-select {
     margin-top: 1.5rem;
     font-size: 1rem;
     font-family: Arial, sans-serif;
@@ -280,12 +280,21 @@
     /* Ensure consistent sizing for all elements */
 }
 
-.hc-select {
+.hc-select, .cornerstone-select {
     width: 100%;
     padding: 0.75rem;
     border: 1px solid var(--border-color);
     border-radius: 4px;
     font-size: 1rem;
-    margin: 1rem 0;
+    margin-bottom: 1.5rem;
     background-color: white;
-}
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M7 10l5 5 5-5z'/%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-position: right 0.5rem center;
+    background-size: 1.5em;
+    padding-right: 2rem;
+  }
+  
