feat: improve general feedback button design for consistency

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -57,6 +57,17 @@
             <div id="actionableSteps" class="steps-list"></div>
         </div>
     </div>
+    <!-- General Feedback Toggle Button -->
+    <button id="generalFeedbackToggle">View General Feedback</button>
+
+    <!-- General Feedback Container -->
+    <div id="generalFeedbackContainer" class="hidden">
+        <h3>General Feedback</h3>
+        <p id="generalFeedbackText"></p>
+        <p id="generalFeedbackScore"></p>
+    </div>
+
+
 
     <!-- Modals -->
     <div id="footnoteModal" class="modal hidden">
