--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -87,6 +87,13 @@
     display: flex;
     gap: 1rem;
     margin-bottom: 1.5rem;
+    width: 100%;
+}
+
+.action-buttons .btn {
+    flex: 1;
+    text-align: center;
+    white-space: nowrap;
 }
 
 .btn {
@@ -297,4 +304,3 @@
     background-size: 1.5em;
     padding-right: 2rem;
   }
-  
