--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,10 +15,9 @@
         <!-- Add cornerstone filter -->
         <select id="cornerstoneFilter" class="cornerstone-select">
             <option value="">All Cornerstones</option>
-            <option value="Empirical Analyses">Empirical Analyses</option>
-            <option value="Complex Systems">Complex Systems</option>
-            <option value="Formal Analyses">Formal Analyses</option>
-            <option value="Multimodal Communications">Multimodal Communications</option>
+            {% for cornerstone in cornerstones %}
+            <option value="{{ cornerstone.name }}">{{ cornerstone.display_name }}</option>
+            {% endfor %}
         </select>
 
         <select id="hcSelect" class="hc-select">
