added data integrity

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,6 @@
 {% extends "base.html" %}
 {% block content %}
 
-
 <div class="container">
     <!-- HC List Section -->
     <div id="hcList" class="hc-list">
@@ -24,7 +23,6 @@
             <option value="">Select an HC example...</option>
         </select>
     </div>
-
 
     <!-- Action Buttons -->
     <div class="action-buttons">
@@ -109,11 +107,11 @@
                 </ul>
 
                 <h3>4. Data Usage</h3>
-                <p>The text you submit may be:</p>
+                <p>The text you submit will not be stored in our application. Your input will be:</p>
                 <ul>
-                    <li>Processed using AI models for generating feedback</li>
-                    <li>Stored temporarily for service improvement</li>
-                    <li>Used anonymously for research purposes</li>
+                    <li>Processed temporarily to generate feedback</li>
+                    <li>Not retained after the feedback session is complete</li>
+                    <li>Used anonymously for service improvement and research purposes</li>
                 </ul>
 
                 <h3>5. Limitations</h3>
