Test deployment workflow through index.html

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -27,7 +27,7 @@
     <!-- Action Buttons -->
     <div class="action-buttons">
         <button id="footnoteButton" class="btn" onclick="showModal('footnoteModal')" disabled>
-            View Example Footnote
+            View Non-Example Footnote
         </button> <button onclick="showModal('contextModal')" class="btn">Add Context</button>
         <a id="handbookLink" class="btn">View in HC Handbook</a>
     </div>
